; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/android/pipeline/extr_ffpipeline_android.c_ffpipeline_get_surface_as_global_ref.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/android/pipeline/extr_ffpipeline_android.c_ffpipeline_get_surface_as_global_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ffpipeline_get_surface_as_global_ref(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @ffpipeline_lock_surface(i32* %6)
  %8 = load i32*, i32** %3, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @ffpipeline_get_surface_as_global_ref_l(i32* %8, i32* %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @ffpipeline_unlock_surface(i32* %11)
  %13 = load i32, i32* %5, align 4
  ret i32 %13
}

declare dso_local i32 @ffpipeline_lock_surface(i32*) #1

declare dso_local i32 @ffpipeline_get_surface_as_global_ref_l(i32*, i32*) #1

declare dso_local i32 @ffpipeline_unlock_surface(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
